--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,109 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  text-align: center;
+}
+
+.header {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.login-button {
+  padding: 10px 20px;
+  background-color: rgb(98, 98, 163);;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+.upload-container {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.upload-container input[type="file"] {
+  display: none;
+}
+
+button {
+  padding: 30px 60px;
+  background-color: #0074d9;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  width: fit-content;
+  margin: auto;
+  font-size: 18px;
+  font-weight: 600;
+  border: none;
+  background-color: rgb(98, 98, 163);
+  border-radius: 5px;
+}
+
+.modal {
+  position: absolute;
+  /* transform: translate(-50%, -50%); */
+  /* border-radius: 5px; */
+  /* width: 250px; */
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  top: 20%;
+  left: 40%;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+input[type="email"],
+input[type="password"] {
+  margin: 10px auto;
+  padding: 10px;
+  /* width: 80%; */
+}
+
+.modal button {
+  background-color: #0074d9;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* ... (existing styles) ... */
+
+.upload-container {
+  margin-top: 100px;
+}
+
+input[type="file"] {
+  display: block; /* Change display to block to make the file input visible */
+  margin: 10px 0;
+  padding: 10px;
+  width: 100%;
+}
+
+/* ... (existing styles) ... */
+
+.uploadIcon {
+  max-width: 50%;
+  max-width: 70%;
+  min-width: 380px;
+  height: 400px;
+  border: 1px solid rgb(216, 212, 212);
+  margin: 20px auto;
+  cursor: pointer;
+}
+
+.uploadIcon img {
+  text-align: center;
 }
